--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.2-1",
     "@rails/webpacker": "4.2.2",
+    "colcade": "^0.2.0",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
     "turbolinks": "^5.2.0"
