--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.2-1",
     "@rails/webpacker": "4.2.2",
     "colcade": "^0.2.0",
+    "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
     "turbolinks": "^5.2.0"
