--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
+    "truncatise": "^0.0.8",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
