--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,6 +1,6 @@
 meta_site_name: "catlinker.com"
 meta_title: "Cat Linker"
-meta_description: "Check out catteries and kittens with more details than you can find anywhere else! Ready for a visit? Get in touch with the cattery easily."
+meta_description: "Hey! Do you like cats? Check out catteries and kittens with more details than you can find anywhere else! Want to plan a visit? Get in touch with the cattery easily."
 meta_facebook_image: "undraw_cat_image_1.png"
 meta_twitter_image: "undraw_cat_image_1.png"
 meta_image_alt: "Cat Linker home image"
