--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "colcade": "^0.2.0",
     "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
+    "js.cookie": "^0.0.4",
     "materialize-css": "^1.0.0",
     "truncatise": "^0.0.8",
     "turbolinks": "^5.2.0"
