--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^2.2.1",
     "js.cookie": "^0.0.4",
     "materialize-css": "^1.0.0",
+    "objectFitPolyfill": "^2.3.0",
     "truncatise": "^0.0.8",
     "turbolinks": "^5.2.0"
   },
