--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@rails/ujs": "^6.0.2-1",
     "@rails/webpacker": "4.2.2",
     "colcade": "^0.2.0",
+    "dropzone": "^5.7.2",
     "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "js.cookie": "^0.0.4",
     "materialize-css": "^1.0.0",
     "objectFitPolyfill": "^2.3.0",
+    "stimulus": "^1.1.1",
     "strftime": "^0.10.0",
     "truncatise": "^0.0.8",
     "turbolinks": "^5.2.0"
