--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js.cookie": "^0.0.4",
     "materialize-css": "^1.0.0",
     "objectFitPolyfill": "^2.3.0",
+    "photoswipe": "^4.1.3",
     "stimulus": "^1.1.1",
     "strftime": "^0.10.0",
     "truncatise": "^0.0.8",
